feat: implement get file via parentId